version 1.9.0 (not yet released)
================================
* include ncep grib2 lib and python interface (ncepgrib2 module).  This
  is used by pygrib to decode grib messages with packingType='grid_complex'
  and 'grid_complex_spatial_differencing' since grib_api does not decode
  these messages correctly.  ncepgrib2.Grib2Encode also provides a way to
  create grib2 messages from scratch.
* grb.__repr__ returns parameterName and parameterUnits, if name and units
  keys don't exist (issue 36).
* regenerate with Cython 0.15.1, fix a couple of latent bugs found by new Cython
  compiler.

version 1.8.4 - svn revision 478
================================
* make sure _set_projparams is called by fromstring (issue 33).
* add __enter__ and __exit__ methods so you can do "with pygrib.open(filename) as f:"
* set projparams instance variable when grib message is created, instead of
  when latlons method called (issue 27).

version 1.8.3 - svn revision 442
================================
* repacked example grib files to prevent tests from failing.  Test failures
  ocurred for grib messages using second-order complex
  packing, due to a bug introduced in the grib_api library in version 1.9.8.

version 1.8.2 - svn revision 434
================================
* Python 3 support. 
* changed name of grib1to2 and grib2to1 to cnvgrib1to2 and cnvgrib2to1
  to avoild conflict with scripts installed by grib_api-1.9.5 (fixes
  issue 22).
* added utils grib1to2 and grib2to1 to MANIFEST (they were not included in
  1.8.1).
* fix open.seek so it works for negative offsets when from_what=1.
* grib_api_version module var changed from int to string (10905 --> '1.9.5').

version 1.8.1 - svn revision 393
================================
* in grib_api 1.9.5, grib_count_in_file does not count
  individual messages inside multi-part messages (as it did in previous
  versions).  So, instead of calling that routine pygrib now counts them
  internally.